--- a/src/assets/css/Nav/Nav.css
+++ b/src/assets/css/Nav/Nav.css
@@ -49,13 +49,11 @@
 } */
 
 .navbarLstContainer {
-  /* border: 1px solid rgb(55, 0, 255); */
   position: absolute;
   left: 10%;
 }
 
 .navbarLst {
-  /* border: 1px solid rgb(9, 255, 0); */
   list-style-type: none;
   display: flex;
   align-items: center;
@@ -75,7 +73,6 @@
   font-size: 14px;
   margin-left: 5px;
   padding: 10px 20px;
-  /* background-color: red; */
   border-radius: 10px;
 }
 
@@ -91,47 +88,68 @@
   text-shadow: 0 0 20px #000;
 }
 .navbarRightContainer {
-  /* border: 1px solid rgb(255, 0, 43); */
+  /* border: 1px solid greenyellow; */
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  position: relative;
-  right: -45%;
-  width: 150px;
-  margin-right: 50px;
+  position: absolute;
+  right: 0px;
+  width: 250px;
+  /* margin-right: 20px; */
 }
-.navbarSearchContainer {
+/* .navbarSearchContainer {
+  position: absolute;
+  top: 20%;
+  right: 120px;
+
   border: 1px solid orange;
-  background-color: transparent;
   position: absolute;
   right: 9%;
   display: flex;
   align-items: center;
   justify-content: center;
 
-  /* padding: 5px 10px; */
-  /* margin: 10px 20px; */
-}
+  padding: 5px 10px;
+  margin: 10px 20px;
+} */
 
-.navSearch {
+.navSearch,
+.navbarMenuContainer,
+.navbarUserContainer,
+.navbarMyStuff {
+  color: white;
+  /* cursor: pointer; */
   /* border: 1px solid pink; */
+  background-color: transparent;
+  border-radius: 50%;
+
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 50%;
+
   width: 40px;
   height: 40px;
-  color: white;
-  /* font-size: 10px; */
-  cursor: pointer;
-
-  /* padding: 5px; */
-  /* margin: 5px; */
 }
-.searchIcon {
+
+.navbar__link {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+.navbar__link:hover {
+  color: #353535;
+  background-color: #fff;
+  /* margin: 10px; */
+  padding: 10px;
+  border-radius: 5px;
+  text-shadow: 0 0 20px #000;
+}
+
+.searchIcon,
+.myStuffIcon {
+  /* border: 1px solid orange; */
   font-size: 20px;
-  margin: 1px;
-  padding: 1px;
+  cursor: pointer;
 }
 .navSearch:hover {
   color: #353535;
@@ -149,30 +167,13 @@
   outline: none;
 } */
 
-.navbarMenuContainer {
-  /* border: 1px solid rgb(255, 0, 43); */
-  background-color: transparent;
-  /* position: absolute;
-  right: 5%; */
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.navbarMenuIcon,
+.navbarUserIcon {
+  /* border: 1px solid orange; */
+  font-size: 30px;
+  cursor: pointer;
 }
-
-.navbarMenuContainer a {
-  color: white;
-  text-decoration: none;
-}
-
-.navbarHamIcon {
-  /* border: 1px solid pink; */
-  font-size: 40px;
-  margin: 1px;
-  padding: 1px; /* margin: 1px;
-  padding: 1px; */
-}
-.navbarHamIcon:hover {
+.navbarMenuIcon:hover {
   color: #353535;
   background-color: #ebebeb;
   border-radius: 50%;
@@ -180,27 +181,43 @@
 }
 
 .navbarDropMenu {
+  cursor: pointer;
+
+  display: none;
   position: absolute;
   top: 50px;
   right: -5px;
   background-color: #333;
   color: white;
   padding: 10px;
+  margin: 5px;
   border-radius: 10px;
   box-shadow: 1px 1px 15px -5px rgba(0, 0, 0, 0.6);
 }
+.navbarDropMenu div {
+  display: flex;
+  margin-left: 5px;
+  /* color: #f10000; */
+}
+.myStuffMenu div {
+  display: flex;
+  margin-left: 5px;
+  /* color: #9f9f9f; */
+}
 
 .navbarDropMenu.active {
-  opacity: 1;
-  visibility: visible;
-  transform: translateY(0);
-  transition: 0.3 ease;
+  display: block;
+  /* opacity: 1; */
+  /* visibility: visible; */
+  /* transform: translateY(0); */
+  /* transition: 3s ease-in-out; */
 }
 .navbarDropMenu.inactive {
-  opacity: 0;
-  visibility: invisible;
-  transform: translateY(-20px);
-  transition: 0.3 ease;
+  display: none;
+  /* opacity: 0; */
+  /* visibility: invisible; */
+  /* transform: translateY(-20px); */
+  /* transition: 3s ease-in-out; */
 }
 .navbarDropMenu ul {
   list-style-type: none;
@@ -211,21 +228,8 @@
   padding: 10px;
 }
 
-.navbarUserContainer {
-  /* position: absolute;
-  right: 1%; */
-  /* border: 1px solid pink; */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: transparent;
-}
-
-.navbarUserIcon {
-  font-size: 30px;
-  cursor: pointer;
-}
-.navbarUserIcon:hover {
+.navbarUserIcon:hover,
+.navbarMyStuff:hover {
   color: #353535;
   background-color: #ebebeb;
   border: 1px solid #ebebeb;
@@ -233,7 +237,7 @@
   box-shadow: 0 0 5px #ebebeb;
 }
 
-.userMenu {
+.userMen {
   position: absolute;
   top: 50px;
   right: -5px;
@@ -244,7 +248,18 @@
   box-shadow: 1px 1px 15px -5px rgba(0, 0, 0, 0.6);
 }
 
-.userMenuLst {
+.myStuffMenu {
+  position: absolute;
+  top: 50px;
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 1px 1px 15px -5px rgba(0, 0, 0, 0.6);
+}
+
+.userMenuLst,
+.myStuffMenuLst {
   display: flex;
   flex-direction: column;
   position: relative;
@@ -252,18 +267,4 @@
   align-items: center;
   justify-content: space-between;
   list-style-type: none;
-}
-.userMenuLstItem {
-  margin-bottom: 10px;
-  padding: 5px;
-}
-
-.userLstLink {
-  color: white;
-  text-decoration: none;
-  /* margin: 5px; */
-}
-
-.userLstLink:hover {
-  color: #ff9900;
 }
