"add some important global css styles, fixing category slider bugs, create profilePhoto UI  component"
the UI component  is within UI folder within the components folder, please use it for the reusable UI components

also very important to check the global css file , it doesnt completed yet but i am working on it

--- a/src/assets/css/Categories/CategorySlider.css
+++ b/src/assets/css/Categories/CategorySlider.css
@@ -41,25 +41,29 @@ header button {
 }
 .button-next,
 .button-prev {
-  padding: 50px 10px;
   width: fit-content;
   background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
   top: 20%;
   cursor: pointer;
-  opacity: 0;
   transition: 0.5s ease;
+  z-index: 999;
+  opacity: 0;
 }
 .button-next.active,
 .button-prev.active {
   opacity: 100;
 }
 .button-next {
-  right: 0;
+  padding: 50px 15px 50px 5px;
+
+  right: -10px;
   border-radius: 10px 0px 0px 10px;
 }
 .button-prev {
+  padding: 50px 5px 50px 15px;
+
   border-radius: 0 10px 10px 0;
 
-  left: 0;
+  left: -10px;
 }
