--- a/src/assets/css/MoviesShowsComponent/MoviePopup.css
+++ b/src/assets/css/MoviesShowsComponent/MoviePopup.css
@@ -1,3 +1,17 @@
-.div * {
-  border: solid 1px;
+.movie-popup {
+  height: 100%;
+  width: 100%;
+  overflow: visible;
+}
+.movie-popup:hover {
+  cursor: pointer;
+}
+.swiper:has(.movie-popup:hover) {
+  overflow: visible;
+}
+
+.movie-popup img {
+  width: 100%;
+  height: 100%;
+  border-radius: var(--border-radius);
 }
