--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -24,6 +24,8 @@ body {
   padding: 0;
   box-sizing: border-box;
   background-color: #1b232d;
+  overflow-x: hidden;
+  width: 100vw;
 }
 
 /* 
@@ -55,8 +57,6 @@ NOTE: absolutly this will be done by code, we will not
 /*SWIPER SLIDER STYLES*/
 .swiper {
   height: 100%;
-  perspective: 500px;
-  transform-style: preserve-3d;
 }
 .button-next,
 .button-prev {
