--- a/src/assets/css/Categories/CategoriesMain.css
+++ b/src/assets/css/Categories/CategoriesMain.css
@@ -1,8 +1,8 @@
 .category-slider {
-  margin: 50px 10px;
+  margin: 50px 15px;
+  margin-left: 0;
   display: flex;
   flex-direction: column;
   gap: 10px;
   /* background-color: #262a2c; */
-  overflow: hidden;
 }
