--- a/src/assets/css/MoviesShowsComponent/MoviePopup.css
+++ b/src/assets/css/MoviesShowsComponent/MoviePopup.css
@@ -1,17 +1,8 @@
-.movie-popup {
-  height: 100%;
-  width: 100%;
-  overflow: visible;
-}
-.movie-popup:hover {
-  cursor: pointer;
-}
-.swiper:has(.movie-popup:hover) {
-  overflow: visible;
+.swiper-slide {
+  perspective: 1600px;
+  position: relative;
 }
 
-.movie-popup img {
-  width: 100%;
-  height: 100%;
-  border-radius: var(--border-radius);
+.swiper:has(.movie-popup:hover) {
+  overflow: visible;
 }
