--- a/src/assets/css/Nav/Nav.css
+++ b/src/assets/css/Nav/Nav.css
@@ -40,14 +40,6 @@
   transition: 0.5s;
 }
 
-/* .navbarLogoImg {
-  width: 300px;
-  object-fit: contain;
-  margin: 10px 5px;
-  padding: 5px;
-  box-shadow: inset 1px 1px 15px -5px rgba(0, 0, 0, 0.6);
-} */
-
 .navbarLstContainer {
   position: absolute;
   left: 10%;
@@ -97,40 +89,22 @@
   width: 250px;
   /* margin-right: 20px; */
 }
-/* .navbarSearchContainer {
-  position: absolute;
-  top: 20%;
-  right: 120px;
 
-  border: 1px solid orange;
-  position: absolute;
-  right: 9%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  padding: 5px 10px;
-  margin: 10px 20px;
-} */
-
-.navSearch,
+.navSearchContainer,
 .navbarMenuContainer,
 .navbarUserContainer,
 .navbarMyStuff {
   color: white;
-  /* cursor: pointer; */
-  /* border: 1px solid pink; */
+  cursor: pointer;
+  border: 1px solid pink;
   background-color: transparent;
   border-radius: 50%;
-
   display: flex;
   align-items: center;
   justify-content: center;
-
   width: 40px;
   height: 40px;
 }
-
 .navbar__link {
   color: white;
   text-decoration: none;
@@ -144,29 +118,18 @@
   border-radius: 5px;
   text-shadow: 0 0 20px #000;
 }
-
 .searchIcon,
 .myStuffIcon {
   /* border: 1px solid orange; */
   font-size: 20px;
   cursor: pointer;
 }
-.navSearch:hover {
+.navSearchContainer:hover {
   color: #353535;
   background-color: #ebebeb;
   border-radius: 50%;
   box-shadow: 0 0 10px #ebebeb;
 }
-
-/* .searchInput {
-   border: none;
-  border: 1px solid blue;
-  background-color: transparent;
-  color: white;
-  margin-right: 5px;
-  outline: none;
-} */
-
 .navbarMenuIcon,
 .navbarUserIcon {
   /* border: 1px solid orange; */
@@ -179,10 +142,8 @@
   border-radius: 50%;
   box-shadow: 0 0 5px #ebebeb;
 }
-
 .navbarDropMenu {
   cursor: pointer;
-
   display: none;
   position: absolute;
   top: 50px;
@@ -204,7 +165,6 @@
   margin-left: 5px;
   /* color: #9f9f9f; */
 }
-
 .navbarDropMenu.active {
   display: block;
   /* opacity: 1; */
@@ -212,6 +172,7 @@
   /* transform: translateY(0); */
   /* transition: 3s ease-in-out; */
 }
+
 .navbarDropMenu.inactive {
   display: none;
   /* opacity: 0; */
@@ -227,7 +188,6 @@
   gap: 10px;
   padding: 10px;
 }
-
 .navbarUserIcon:hover,
 .navbarMyStuff:hover {
   color: #353535;
@@ -236,7 +196,6 @@
   border-radius: 50%;
   box-shadow: 0 0 5px #ebebeb;
 }
-
 .userMenu {
   position: absolute;
   top: 50px;
@@ -247,7 +206,6 @@
   border-radius: 10px;
   box-shadow: 1px 1px 15px -5px rgba(0, 0, 0, 0.6);
 }
-
 .myStuffMenu {
   position: absolute;
   top: 50px;
@@ -267,4 +225,27 @@
   align-items: center;
   justify-content: space-between;
   list-style-type: none;
+}
+
+.searchInput {
+  position: absolute;
+  top: 50px;
+  left: -80%;
+  border: none;
+  /* border: 1px solid blue; */
+  border-radius: 20px;
+  outline: none;
+  font-size: 20px;
+  background-color: transparent;
+  box-shadow: inset 1px 2px 10px -1px rgba(0, 0, 0, 0.3);
+  /* color: white; */
+  margin-right: 5px;
+  padding: 5px 20px;
+  z-index: 1000;
+}
+.searchInput::placeholder {
+  color: #333;
+}
+.searchInput:focus {
+  box-shadow: inset 1px 2px 20px -1px rgba(0, 0, 0, 0.3);
 }
