--- a/src/assets/css/Footer/Footer.css
+++ b/src/assets/css/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footerContainer {
-  background-color: #232f3e;
+  background-color: #111;
   color: #fff;
   position: fixed;
   height: 20vh;
@@ -32,7 +32,7 @@
 
 .footerLstContainer {
   /* border: 1px solid yellow; */
-  background-color: #232f3e;
+  background-color: #111;
   /* display: flex;
   align-items: center;
   justify-content: center; */
