--- a/src/assets/css/Nav/Nav.css
+++ b/src/assets/css/Nav/Nav.css
@@ -3,7 +3,7 @@
 }
 
 .navbarContainer {
-  background-color: hsla(0, 0%, 5%, 0.9);
+  background-color: #333;
   color: white;
   position: fixed;
   height: 10vh;
@@ -39,6 +39,14 @@
   color: #ff9900;
   transition: 0.5s;
 }
+
+/* .navbarLogoImg {
+  width: 300px;
+  object-fit: contain;
+  margin: 10px 5px;
+  padding: 5px;
+  box-shadow: inset 1px 1px 15px -5px rgba(0, 0, 0, 0.6);
+} */
 
 .navbarLstContainer {
   position: absolute;
@@ -230,17 +238,20 @@
 .searchInput {
   position: absolute;
   top: 50px;
-  left: -80%;
+  right: 50%;
+  width: 50vw;
   border: none;
-  /* border: 1px solid blue; */
+  border: 5px solid rgba(255, 255, 255, 0.9);
   border-radius: 20px;
-  outline: none;
+  outline: solid rgba(85, 85, 85, 0.8);
+  outline-width: 15px;
   font-size: 20px;
-  background-color: transparent;
+  background-color: rgba(225, 225, 225, 0.9);
   box-shadow: inset 1px 2px 10px -1px rgba(0, 0, 0, 0.3);
   /* color: white; */
   margin-right: 5px;
-  padding: 5px 20px;
+  margin: 20px 0px 0px 0px;
+  padding: 10px;
   z-index: 1000;
 }
 .searchInput::placeholder {
