--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -20,14 +20,14 @@
 
 body {
   font-family: "Amazon Ember", Arial, sans-serif;
-  background-color: #fff !important;
+  background-color: var(--primary-bg-color);
   text-align: center;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #1b232d;
   overflow-x: hidden;
   width: 100vw;
+  color: var(--main-text-color);
 }
 
 /* 
