--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -65,11 +65,12 @@ NOTE: absolutly this will be done by code, we will not
   width: fit-content;
   background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
-  top: 20%;
   cursor: pointer;
   transition: 0.5s ease;
   z-index: 999;
   opacity: 0;
+  height: 90%;
+  top: 10%;
 }
 .button-next.active,
 .button-prev.active {
