--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -77,15 +77,18 @@ NOTE: absolutly this will be done by code, we will not
   opacity: 100;
 }
 .button-next {
-  padding: 50px 15px 50px 5px;
-
-  right: -10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 10px 0px 0px 10px;
+  padding: 0px 10px;
+  right: -10px;
 }
 .button-prev {
-  padding: 50px 5px 50px 15px;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 0 10px 10px 0;
-
+  padding: 0px 10px;
   left: -10px;
 }
