--- a/src/assets/css/GuestPage/GuestPage.css
+++ b/src/assets/css/GuestPage/GuestPage.css
@@ -1,44 +1,4 @@
-/* Global Rules Start */
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Outfit", sans-serif;
-    font-optical-sizing: auto;
-    width: 100%;
-    scroll-behavior: smooth;
-    /* position: relative; */
-}
 
-body {
-    width: 100%;
-    background-color: black !important;
-
-}
-
-.container {
-    background-color: black !important;
-    min-height: 100vh;
-
-
-    /* overflow: hidden; */
-}
-
-/* Global Rules END */
-
-/* Header Start */
-
-header {
-    background-color: #00050d;
-    display: flex;
-    justify-content: space-between;
-    height: 6.5vh;
-    width: 100%;
-    position: fixed;
-    
-    top: 0px;
-
-}
 
 .logo {
     margin-left: 40px;
@@ -163,7 +123,7 @@ border-radius: 50%;
     transition: ease-in 0.3s;
     border: 2px white solid;
     border-radius: 10px;
-
+    background-color: var(--action-background-color);
 }
 
 .content .text button:hover {
@@ -228,6 +188,7 @@ border-radius: 50%;
     transition: ease-in 0.3s;
     border: 2px white solid;
     border-radius: 10px;
+    background-color: var(--action-background-color);
 
 }
 
@@ -273,68 +234,4 @@ border-radius: 50%;
 
 }
 
-/* 3rd Content start */
-
-/* Footer Start */
-footer {
-    position: relative;
-    background-color: #222222;
-    width: 100%;
-}
-
-/* Footer End */
-
-footer .plogo {
-    width: 150px;
-    margin: auto;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-footer .links {
-    width: 100%;
-    list-style-type: none;
-    /* padding-left: 20%; */
-    text-decoration: none;
-    margin: auto;
-    padding-left: 100px;
-    
-}
-
-footer .links ul {
-    list-style-type: none;
-    display: flex;
-    
-    width: 100%;
-    
-justify-content:space-evenly;
-/* flex-wrap: nowrap;  */
-    text-decoration: none;
-    /* margin-left:10px ; */
-    
-}
-
-footer .links ul li {
-    text-decoration: none;
-
-}
-
-footer .links ul li a {
-    text-decoration: none;
-    color: #82c8e3;
-    transition: ease .3s;
-    
-}
-
-footer .links ul li a:hover {
-    color: #59666e;
-}
-
-.notes {
-
-    text-align: center;
-    color: gray;
-}
-
-
-/* Body END */
+/* Body END
