--- a/src/assets/css/SignUp/SignUp.css
+++ b/src/assets/css/SignUp/SignUp.css
@@ -9,7 +9,7 @@
   background-color: #fff;
 } */
 .signup-main-container{
-  background-color: #f0f2f2;
+  background-color: #fff;  
 }
 .signup-box {
   background-color: #fff;
