--- a/src/assets/css/MyStuff/MyStuff.css
+++ b/src/assets/css/MyStuff/MyStuff.css
@@ -3,37 +3,45 @@
 }
 
 .myStuffPage {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  background-color: #111;
   color: white;
-  height: 125vh;
-  top: 0%;
-  bottom: 0%;
-  left: 0%;
-  right: 0%;
-  padding: 1% 10%;
+  height: 100vh;
+  padding: 20px 2%;
   font-family: Arial, sans-serif;
+  text-align: start;
 }
 
-.myStuffPage div:first-child {
-  margin-top: 50px;
-  background-color: #111;
+.myStuffHeader {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  margin-top: 40px;
+  font-size: 50px;
+  padding: 1px 10px;
 }
-.myStuffPage div {
-  background-color: #111;
+
+h2 {
+  color: white;
+}
+
+.sub1 {
+  margin-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: start;
   justify-content: center;
+  padding: 10px;
 }
-
+.sub2 {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: start;
+  padding: 10px;
+}
 a {
-  color: aliceblue;
   text-decoration: underline;
 }
 a:hover {
   cursor: pointer;
-  color: aliceblue;
 }
