--- a/src/assets/css/Nav/Nav.css
+++ b/src/assets/css/Nav/Nav.css
@@ -1,17 +1,16 @@
 * {
   box-sizing: border-box;
 }
-
 .navbarContainer {
   z-index: 9999;
   background-color: var(--bg-color-lighter);
   color: white;
-  position: fixed;
-  height: 80px;
-  width: 99vw;
+  position: sticky;
+  height: 70px;
+  width: 99.5vw;
   margin: auto;
   top: 0%;
-  opacity: 0.95;
+  opacity: 0.97;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,14 +20,13 @@
   border-bottom-left-radius: 15px;
   box-shadow: 1px 5px 15px -5px rgba(0, 0, 0, 0.6);
 }
-
 .navbarLogo {
   /* border: 1px solid yellow; */
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
-  left: 1px;
+  left: 20px;
   padding: 5px;
   margin: 5px;
 }
@@ -36,13 +34,12 @@
   /* border: 1px solid red; */
   font-size: 100px;
   color: white;
-  transition: 0.5s;
+  transition: 0.3s ease-in-out;
 }
 .navbarLogoIcon:hover {
-  color: #ff9900;
-  transition: 0.5s;
+  color: #4ea9ff;
+  transition: 0.3s ease-in-out;
 }
-
 /* .navbarLogoImg {
   width: 300px;
   object-fit: contain;
@@ -50,20 +47,18 @@
   padding: 5px;
   box-shadow: inset 1px 1px 15px -5px rgba(0, 0, 0, 0.6);
 } */
-
 .navbarLstContainer {
+  /* border: 1px solid yellow; */
   position: absolute;
-  left: 120px;
-  margin-left: 10px;
+  left: 130px;
+  margin-left: 20px;
 }
-
 .navbarLst {
   list-style-type: none;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
 .navbarLstHome {
   /* background: radial-gradient(
     circle farthest-corner at 50% -50%,
@@ -71,30 +66,32 @@
     hsla(0, 0%, 25%, 0.95) 60%
   ); */
   background: var(--primary-btn-background);
-  transition: 0.5s ease-in-out;
+  transition: 0.2s ease-in-out;
 }
 .navbarLstLink {
-  transition: 0.5s ease-in-out;
+  /* border: 1px solid red; */
+
+  transition: 0.2s ease-in-out;
   color: #fff;
   text-decoration: none;
   font-size: var(--font-size-primary);
   font-weight: 600;
-  margin-left: 5px;
-  padding: 15px 20px;
+  margin-left: 10px;
+  padding: 10px;
   border-radius: 10px;
 }
-
 .navbarLstHome:hover {
   background: none;
-  transition: 0.5s ease-in-out;
+  transition: 0.2s ease-in-out;
 }
 .navbarLstLink:hover {
-  transition: 0.5s ease-in-out;
+  transition: 0.2s ease-in-out;
   color: var(--primary-bg-color);
   background-color: var(--bg-hover-color);
   border-radius: 10px;
 }
 .navbarUserContainerBeforeAuth {
+  /* border: 1px solid greenyellow; */
   display: flex;
   align-items: center;
   justify-content: end;
@@ -132,7 +129,6 @@
 }
 .navbar__link:hover {
   cursor: pointer;
-
   transition: 0.2s ease-in-out;
   color: #353535;
   background-color: #fff;
@@ -171,10 +167,10 @@
 .navbarDropMenu {
   display: none;
   position: absolute;
-  top: 50px;
-  right: -10px;
+  top: 55px;
+  right: -5px;
   min-width: 300px;
-  background-color: #333;
+  background-color: var(--bg-color-lighter);
   color: white;
   padding: 10px;
   margin: 5px;
@@ -182,12 +178,18 @@
   box-shadow: 1px 1px 15px -5px rgba(0, 0, 0, 0.6);
 }
 .navbarDropMenu div,
-.myStuffMenu div {
+.myStuffMenu div,
+.userMenu div {
   display: flex;
   margin-left: 5px;
   margin-bottom: 15px;
   margin-top: 15px;
   color: #9f9f9f;
+}
+
+.navbar__linkMobile {
+  display: none;
+  opacity: 0;
 }
 
 .navbarDropMenu.active {
@@ -225,29 +227,28 @@
 }
 .userMenu {
   position: absolute;
-  top: 50px;
+  top: 55px;
   right: -5px;
-  min-width: 150px;
-  background-color: #333;
+  min-width: 200px;
+  background-color: var(--bg-color-lighter);
   color: white;
-  padding: 10px;
+  padding: 15px;
   margin: 5px;
   border-radius: 10px;
   box-shadow: 1px 1px 15px -5px rgba(0, 0, 0, 0.6);
 }
 .myStuffMenu {
   position: absolute;
-  top: 50px;
+  top: 55px;
   right: -5px;
-  min-width: 150px;
-  background-color: #333;
+  min-width: 250px;
+  background-color: var(--bg-color-lighter);
   color: white;
   padding: 10px;
   margin: 5px;
   border-radius: 10px;
   box-shadow: 1px 1px 15px -5px rgba(0, 0, 0, 0.6);
 }
-
 .userMenuLst,
 .myStuffMenuLst {
   /* display: flex; */
@@ -262,7 +263,6 @@
   justify-content: start;
   list-style-type: none;
 }
-
 .searchInput {
   position: absolute;
   top: 50px;
@@ -287,4 +287,116 @@
 }
 .searchInput:focus {
   box-shadow: inset 1px 2px 20px -1px rgba(0, 0, 0, 0.3);
+}
+
+/* For tablets and below (max-width: 768px) */
+@media (max-width: 768px) {
+  .navbarLogo {
+    left: 5px;
+  }
+  .navbarLogoIcon {
+    font-size: 80px;
+  }
+
+  .navbarLstContainer {
+    left: 90px;
+    margin-left: 5px;
+  }
+
+  .navbarLstLink {
+    font-size: 14px;
+    margin-left: 10px;
+    padding: 5px 5px;
+  }
+
+  .navbarRightContainer {
+    font-size: 80px;
+    width: 180px;
+    margin-right: 5px;
+  }
+
+  .myStuffMenu {
+    min-width: 100px;
+    right: 2%;
+    font-size: 12px;
+    padding: 3px;
+  }
+  .userMenu {
+    min-width: 150px;
+    right: 2%;
+    font-size: 12px;
+    padding: 5px;
+    padding-bottom: 15px;
+  }
+  .navbarDropMenu {
+    min-width: 220px;
+    right: 2%;
+    font-size: 12px;
+    padding: 1px;
+  }
+
+  .searchInput {
+    right: 30%;
+    font-size: 16px;
+  }
+}
+
+/* For mobile screens (max-width: 480px) */
+@media (max-width: 480px) {
+  .navbarContainer {
+    flex-direction: column;
+    height: auto;
+    padding: 10px 0;
+  }
+
+  .navbarLogoIcon {
+    font-size: 80px;
+  }
+
+  .navbarLstContainer {
+    display: none;
+  }
+
+  .navbarRightContainer {
+    /* font-size: 60px; */
+    width: 150px;
+    margin-right: 5px;
+  }
+
+  .navbarLstLink {
+    font-size: 12px;
+    padding: 6px;
+  }
+
+  .searchInput {
+    right: 5%;
+    font-size: 14px;
+  }
+  .navbar__linkMobile {
+    display: flex;
+    opacity: 1;
+  }
+  .navbarDropMenu div {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .navbarLstHome {
+    /* border: 1px solid red; */
+
+    transition: 0.2s ease-in-out;
+    color: #fff;
+    /* text-decoration: none; */
+    font-weight: 600;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  .navbarDropMenu ul {
+    row-gap: 5px;
+    column-gap: 1px;
+  }
+  .navbar__link:hover {
+    /* margin: 10px; */
+    padding: 5px;
+  }
 }
