--- a/src/assets/css/Footer/Footer.css
+++ b/src/assets/css/Footer/Footer.css
@@ -45,3 +45,45 @@
   color: #b1b1b1;
   text-decoration: none;
 }
+
+/* For tablets and below (max-width: 768px) */
+@media (max-width: 768px) {
+  .footerLogoImg {
+    font-size: 70px;
+  }
+
+  .footerLst {
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+
+  .footerLstItem {
+    margin-left: 15px;
+    font-size: 14px;
+  }
+}
+
+/* For mobile screens (max-width: 480px) */
+
+@media (max-width: 480px) {
+  .footerContainer {
+    height: auto;
+    padding-bottom: 20px;
+  }
+
+  .footerLogoImg {
+    font-size: 50px;
+  }
+
+  .footerLst {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+  }
+
+  .footerLstItem {
+    margin-left: 0;
+    margin-bottom: 10px;
+    font-size: 12px;
+  }
+}
